# genpopsim

./: .gitignore  pyproject.toml  pyrightconfig.json
popgensim/: __init__.py  core.py  epistasis.py  genetics.py  plotting.py  population.py  pyrightconfig.json
popgensim/core/: allele.py  chromosome.py
popgensim/genetics/: genes.py  genome.py  mutations.py
popgensim/population/: individual.py  population.py
popgensim/sample_code/: strategic_genes.py
popgensim/world/: energetics.py  environment.py  world.py
scripts/: human-like.py  test-genome2.py  test_genome.py
